# Airline

./: .gitignore  README.md  makefile
Airline-Client/: CMakeLists.txt  main.c
Airline-Client/GUI/: README.md
Airline-Client/TUI/: CMakeLists.txt  main.c
Airline-Client/TUI/src/: includes.h  jsonHandler.c  jsonHandler.h  main.c
Airline-Client/test-data/: TestUser67-dms.json  users.json
Airline-Server/: README.md
